Add basic information html forms for name, email, date of birth, and submit button

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,4 +9,11 @@ body {
 
 .header {
   border-bottom: 2px solid black;
+  margin-bottom: 10px;
+}
+
+.userinfo {
+  border-bottom: 2px solid black;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
 }
