Add hidden divs to act as selectors for questins, WIP make javascript read the html forms

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,3 +21,7 @@ body {
 .userinput form {
   padding: 3px;
 }
+
+#output-user-info, #suggestion1, #suggestion2, #suggestion3 {
+  display: none;
+}
